fixed responsive table view in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,17 @@
 /*   table-layout: fixed;*/
 /*}*/
 
-.table td, th{
+.table td{
     white-space: normal;
-    word-wrap: break-word;
+    /*word-wrap: break-word;*/
+    max-width: 10em;
+    overflow: scroll;
+}
+
+.table > thead{
+    width: max-content;
+}
+
+table{
+    table-layout: fixed;
 }
